# TinyEngine

./: CMakeLists.txt
Engine/: CMakeLists.txt
Engine/Windows/: CMakeLists.txt
Engine/Windows/include/glad/: glad.h
Engine/Windows/src/: glad.c
Engine/_Common/: CmakeLists.txt
Engine/_Common/include/: GUILoopThread.h  MessageThread.h
Engine/_Common/src/: GUILoopThread.cpp  MessageThread.cpp
Engine/_Graphics/: CMakeLists.txt
Engine/_Graphics/include/: Camera.h  Material.h  RenderTarget.h  Scene.h  Shader.h  Transform.h
Engine/_Graphics/src/: RenderTarget.cpp  Shader.cpp
Engine/_Platform/: CmakeLists.txt
Engine/_Platform/include/: WindowsGUI.h  WindowsOpenGLGUI.h
Engine/_Platform/src/: WindowsGUI.cpp  WindowsOpenGLGUI.cpp
Engine/_Windows/: CMakeLists.txt
Engine/_Windows/include/: EngineOpenGL.h
Engine/_Windows/include/debug/glad/: glad.h
Engine/_Windows/include/glad/: glad.h
Engine/_Windows/src/: EngineOpenGL.cpp  glad.c
Engine/_Windows/src/debug/src/: glad.c
Engine/include/: Game.h
Engine/src/: Game.cpp
Platform/: CmakeLists.txt
Platform/include/: Win32Gui.h  WinGLGUI.cpp  WinGLGUI.h  WinGUI.h  Window.h  WindowsGUI.cpp  WindowsGUI.h  WindowsOpenGLGUI.h
Platform/src/: Win32Gui.cpp  WinGUI.cpp  Window.cpp  WindowsGUI.cpp  WindowsOpenGLGUI.cpp
TinyEngine/: CMakeLists.txt
TinyEngine/src/: main.cpp
